--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test-notes": "npx jest NotesForm.test.tsx",
+    "test-todos": "npx jest TodoAndPhotoList.test.tsx"
   },
   "dependencies": {
     "next": "15.1.6",
@@ -28,6 +30,7 @@
     "eslint-config-next": "15.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "node-fetch": "^3.3.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
